-corregido tipo de input para cantidad

--- a/src/app/pages/reportes/customers/components/edit-reserva-modal/components/reserva/reservas-component/reservas-component.component.html
+++ b/src/app/pages/reportes/customers/components/edit-reserva-modal/components/reserva/reservas-component/reservas-component.component.html
@@ -150,7 +150,7 @@
           formControlName="promesaPago"
           style="width: 150px"
           class="form-control"
-          type="text"
+          type="number"
           placeholder="$ 0.00    MXN"
           [class.is-invalid]="isControlInvalid('promesaPago')"
           [class.is-valid]="isControlValid('promesaPago')"
