- Boton de Modifica Reserva Activo siempre - Fotter en el calendario incompleto

--- a/src/app/pages/reportes/customers/components/edit-reserva-modal/edit-reserva-modal.component.html
+++ b/src/app/pages/reportes/customers/components/edit-reserva-modal/edit-reserva-modal.component.html
@@ -207,8 +207,8 @@
 
       <div class="f col-lg-12">
         <button
-          disabled
-          class="btn btn-primary btn-block"
+        (click)="openModifica()"
+        class="btn btn-primary btn-block"
           type="submit"
           value="7"
           (click)="setStep(1)"
