- fotter Calendar incompleto

--- a/src/app/pages/reportes/customers/components/edit-reserva-modal/components/reserva/reservas-component/reservas-component.component.html
+++ b/src/app/pages/reportes/customers/components/edit-reserva-modal/components/reserva/reservas-component/reservas-component.component.html
@@ -466,7 +466,7 @@
       </button>
     </div>
 <div class="modal-body">
-    <!-- <button type="button" class="btn btn-success col-md-12" (click)="modal.close(1);next.emit();">Agregar Pago Completo a la Cuenta</button>
+    <!-- <button type="button" class="btn btn-successf col-md-12" (click)="modal.close(1);next.emit();">Agregar Pago Completo a la Cuenta</button>
 <p></p> -->
       <form [formGroup]="thirdForm">
         <input 
