--- a/src/app/pages/reportes/customers/components/edit-reserva-modal/edit-reserva-modal.component.html
+++ b/src/app/pages/reportes/customers/components/edit-reserva-modal/edit-reserva-modal.component.html
@@ -87,7 +87,7 @@
       class="col px-3 py-3 rounded-sm mr-7 mb-7"
     >
       <div>
-        <label style="color: white"> Pagado: </label>
+        <label style="color: white"> Pagado y Abonado: </label>
       </div>
 
       <label style="color: white;font-size: large;"> $ {{(customerService.getCurrentHuespedValue.porPagar-customerService.getCurrentHuespedValue.pendiente).toLocaleString("es-MX")}}.00 </label>
