- Id_ de transaccion agregado al detalle del movimiento - Modificacion en descripcion de descuentos - Corregido Estatus en Promesa de Pago - Cambio de diseño promesas de pago - agregada fecha min en Promesa de pago - Cambios del diseño de fechas en promesa de pago - correcion de estatus y vigencia en promesas de pagos - Correcion en el boton de cerrar ventana (la mitad quedaba por debajo de un parent div y no se podia clickear) - Correcion en el calendario de promesas de pago, aparecia cortado - Incrementado tamaño del ngbDatepicker a 3.5rem - Boton de Modifica Reserva Activo Siempre

--- a/src/app/pages/reportes/customers/components/edit-reserva-modal/components/reserva/reservas-component/reservas-component.component.scss
+++ b/src/app/pages/reportes/customers/components/edit-reserva-modal/components/reserva/reservas-component/reservas-component.component.scss
@@ -22,3 +22,38 @@ table {
       width: 5%;
       text-align: left;
   }
+  
+  // .q-datepicker{
+  //   ngb-datepicker{
+  //     left:0 !important;
+  //     width: 350px;
+  //     .ngb-dp-months{
+  //       .ngb-dp-month{
+  //         width: 100%;
+  //         .ngb-dp-weekday{
+  //           width: 2.5rem;
+  //           margin-right: .5rem;
+  //         }
+  //         .ngb-dp-week{
+  //           .ngb-dp-day{
+  //               width: 2.5rem;
+  //               margin-right: .5rem;
+  //               div{
+  //                   width: 100%;
+  //               }
+  //           }
+  //         }
+  //       }
+  //     }
+  //   }
+  // }
+  ngb-datepicker{
+    left: 0px !important;
+    top: 0px !important;
+    padding-top: 0px !important;
+    padding-right: 0px !important;
+    padding-bottom: 0px !important;
+    padding-left: 0px !important;
+    position: absolute !important;
+    transform: translate(0px, 28px)!important;
+  }
