--- a/src/app/pages/reportes/customers/components/edit-reserva-modal/edit-reserva-modal.component.html
+++ b/src/app/pages/reportes/customers/components/edit-reserva-modal/edit-reserva-modal.component.html
@@ -16,12 +16,12 @@
   <br />
   <div class="container">
     <div
-      style="font: bold; color: white"
+      style="font: bold; color: white; pointer-events: none;"
       class="modal-title h4 col-12"
       id="example-modal-sizes-title-lg"
     >
-      <div class="row">
-        <h2 style="font-size: 1.5em">{{ huesped.nombre   }}</h2>
+      <div class="row col-md-6">
+        <h2 style="font-size: 1.5em">{{ huesped.nombre}}</h2>
       </div>
       <div class="row">
         <small style="color: white; font-size: 1em"
@@ -207,7 +207,7 @@
 
       <div class="f col-lg-12">
         <button
-          disabled
+          
           class="btn btn-primary btn-block"
           type="submit"
           value="7"
