--- a/src/app/pages/reportes/customers/components/edit-reserva-modal/components/reserva/reservas-component/reservas-component.component.html
+++ b/src/app/pages/reportes/customers/components/edit-reserva-modal/components/reserva/reservas-component/reservas-component.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" >
     <div class="row">
       <div class="col-md-6">
         <br />
@@ -142,50 +142,54 @@
   </div>
   <form [formGroup]="formGroupPromesa">
   <div class="row col-md-12">
-      <div class="col-sm-6">
-        <br />
-        <label class="control-label">Cantidad Acordada:</label>
-        <br />
-        <input
-          formControlName="promesaPago"
-          style="width: 150px"
-          class="form-control"
-          type="number"
-          placeholder="$ 0.00    MXN"
-          [class.is-invalid]="isControlInvalid('promesaPago')"
-          [class.is-valid]="isControlValid('promesaPago')"
-        />
-      </div>
-  
-        <div class="col-sm-6">
-          <br>
-          <label style="color:#00506a; font-weight: bold;" class="form-label">Selecciona Fecha Final</label>
-          <div class="form-group" >
+        <div class="col-sm-7">
+          <br />
+          <div class="form-group">
+            <label style="color:#00506a; font-weight: bold;" class="form-label">Fecha de Promesa</label>
             <div class="input-group">
-              <input  
+              <input 
               formControlName="fechaPromesaPago"  
-              hidden 
-              class="form-control"  
-              placeholder="yyyy-mm-dd" 
-              name="dp"  
-              [startDate]="fromDate!"
-              ngbDatepicker
-              (dateSelect)="fechaSeleccionadaFinal($event)" 
-              [minDate]=today
-              #f="ngbDatepicker">
-  
-              <input         
-              [disabled]="huesped.estatus=='Reserva Cancelada'||huesped.estatus=='No Show'"
-              class="form-control"  placeholder="yyyy-mm-dd" name="dpnotHidden" #ff  [value]="fechaFinalBloqueo" >
-  
+                     class="form-control form-control-lg form-control-solid" 
+                     name="dp" 
+                     ngbDatepicker 
+                     autocomplete="off"
+                     [minDate]="minDate"
+                     placeholder="Seleccione Fecha de Promesa"
+                     [footerTemplate]="footerTemplate" 
+                     #d="ngbDatepicker"
+                     [value]="fechaFinalBloqueo"
+                     [(ngModel)]="model"
+                     (click)="d.toggle()"
+                     (dateSelect)="fechaSeleccionadaFinal($event)" >
               <div class="input-group-append">
-                <button class="btn btn-primary" (click)="f.toggle()" type="button">
+                <button [disabled]="huesped.estatus=='Reserva Cancelada'||huesped.estatus=='No Show'" class="btn btn-outline-secondary " (click)="d.toggle()" type="button">
                   <i class="fa fa-calendar icon"></i>
                 </button>
               </div>
             </div>
           </div>
+        <ng-template #footerTemplate>
+          <hr class="my-0">
+          <button class="btn btn-primary btn-sm m-2 float-left" (click)="model = today; d.close()">Today</button>
+          <button class="btn btn-secondary btn-sm m-2 float-right" (click)="d.close()">Close</button>
+        </ng-template>
+        
         </div>
+        <div class="col-sm-5">
+          <br />
+          <label class="control-label">Cantidad Acordada:</label>
+          <br />
+          <input
+            formControlName="promesaPago"
+            style="width: 150px"
+            class="form-control"
+            type="number"
+            placeholder="$ 0.00    MXN"
+            [class.is-invalid]="isControlInvalid('promesaPago')"
+            [class.is-valid]="isControlValid('promesaPago')"
+          />
+        </div>
+    
   </div>
 </form>
 <div class="row">
@@ -265,7 +269,7 @@
         <th mat-header-cell  *matHeaderCellDef mat-sort-header> Estatus </th>
         <td style="color: white; font-weight: bold;" 
         [style.background]="row.Color"
-        at-cell *matCellDef="let row"> {{row.Expirado }} </td>
+        at-cell *matCellDef="let row"> {{row.Expirado}} </td>
       </ng-container>
       <!-- [ngStyle]="{'background-color': row.Expirado ? '#f7347a' : '#00c688' }"  -->
 
@@ -440,34 +444,50 @@
     <app-loader-spinner></app-loader-spinner>
   </ng-container>
 
-  <ng-template #pregunta let-modal>
-    <div class="modal-header">
-      <h4 class="modal-title">Realizar Deposito</h4>
-      <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
-        <span aria-hidden="true">&times;</span>
-      </button>
-    </div>
-<div class="modal-body">
-    <button type="button" class="btn btn-success col-md-12" (click)="modal.close(1);next.emit();">Agregar Pago Completo a la Cuenta</button>
-<p></p>
-    <ng-container *ngIf="pagoManual">
-      <form [formGroup]="thirdForm">
-        <input 
-        class="form-control col-md-6"
-        formControlName='pagoManualInput'
-        > 
-        <button class="btn btn-info col-md-6" (click)="modal.close(2);next.emit();">Aceptar
-        </button>
-        <br>
-      </form>
-    </ng-container>
-    <p></p>
 
-  <button type="button" class="btn btn-secondary col-md-12" (click)="muestraInput()">Agregar Pago Parcial</button>
-  <p></p>
+
+
+  <ng-template #pregunta let-modal>
+
+    <div style="background-color: #00506a; text-align: center;" class="modal-header">
+      <button
+      style="
+        position: absolute;
+        top: 2%;
+        right: 1%;
+        background-color: #fa6d7c;
+        font-weight: bold;
+        color: white;
+      "
+      class="btn"
+      (click)="modal.close(0)"
+    >
+      X
+    </button>
+      <label
+        class="h4"
+        style="color: aliceblue; text-align: center; padding-top: 5px"
+      >
+        REALIZAR DEPÓSITO
+      </label>
+    </div>
+    <p></p> 
+
+  <div class="col-sm-12">
+    <form [formGroup]="thirdForm">
+      <input 
+      placeholder="$ Cantidad Recibida"
+      class="form-control col-md-12"
+      formControlName='pagoManualInput'
+      >
+      <!-- <button class="btn btn-info col-md-12" (click)="modal.close(2);next.emit();">Aceptar -->
+      <br>
+    </form>
+  </div>
+  <!-- <button type="button" class="btn btn-secondary col-md-12" (click)="muestraInput()">Agregar Pago Parcial</button> -->
   <div class="col-sm-12">
     <form [formGroup]="forthForm">
-      <mat-form-field appearance="fill">
+      <mat-form-field style="width: 100%;" appearance="fill">
         <mat-label>Forma de Pago</mat-label>
         <mat-select 
         style="font-weight: bold;"
@@ -477,13 +497,9 @@
         </mat-select>
     </mat-form-field>
     </form>
-    
-</div>
-</div>
-<p></p>
+  </div>
 
-     
     <div class="modal-footer">
-      <button type="button" class="btn btn-warning col-md-12" (click)="modal.close(3)">Cerrar</button>
+      <button type="button" class="btn btn-primary col-md-12" (click)="modal.close(2);next.emit();">Agregar Anticipo</button>
     </div>
   </ng-template>
