--- a/src/app/pages/reportes/customers/components/edit-reserva-modal/components/transacciones/transacciones-component/transacciones-component.component.html
+++ b/src/app/pages/reportes/customers/components/edit-reserva-modal/components/transacciones/transacciones-component/transacciones-component.component.html
@@ -414,16 +414,16 @@
    
      <!-- Fecha Column -->
      <ng-container matColumnDef="Fecha">
-       <th   mat-header-cell *matHeaderCellDef mat-sort-header> Fecha </th>
-       <td  mat-cell *matCellDef="let row"> {{row.Fecha.split('T')[0]}} </td>
+       <th class="fecha-columna"  mat-header-cell *matHeaderCellDef mat-sort-header> Fecha </th>
+       <td class="fecha-columna" mat-cell *matCellDef="let row"> {{row.Fecha.split('T')[0].split('-')[2]+'-'+row.Fecha.split('T')[0].split('-')[1]+'-'+row.Fecha.split('T')[0].split('-')[0]}} </td>
        <td mat-footer-cell *matFooterCellDef>  </td>
    
      </ng-container>
    
      <!-- Concepto Column -->
      <ng-container matColumnDef="Concepto">
-       <th  mat-header-cell  *matHeaderCellDef mat-sort-header> Concepto </th>
-       <td  mat-cell *matCellDef="let row">{{row.Descripcion}} 
+       <th class="concepto-columna" mat-header-cell  *matHeaderCellDef mat-sort-header> Concepto </th>
+       <td class="concepto-columna"  mat-cell *matCellDef="let row">{{row.Descripcion}} 
           <ng-container *ngIf="row.Cargo!=0 && row.Forma_de_Pago!='Descuento' && row.Estatus=='Activo'">(C)</ng-container>  
           <ng-container *ngIf="row.Abono!=0 && row.Forma_de_Pago!='Descuento' && row.Estatus=='Activo'">(A)</ng-container>  
           <ng-container *ngIf="row.Estatus=='Cancelado'">(X)</ng-container>  
@@ -435,9 +435,17 @@
    
      </ng-container>
    
+
+          <!-- _id. Column -->
+     <ng-container matColumnDef="_id">
+       <th hidden mat-header-cell  *matHeaderCellDef mat-sort-header> _id </th>
+       <td hidden  mat-cell *matCellDef="let row">  {{row._id}}</td>
+       <td hidden  mat-footer-cell *matFooterCellDef> _id </td>
+     </ng-container>
+
      <!-- F.P. Column -->
      <ng-container matColumnDef="F.P.">
-       <th hidden mat-header-cell  *matHeaderCellDef mat-sort-header> F.P. </th>
+       <th  hidden mat-header-cell  *matHeaderCellDef mat-sort-header> F.P. </th>
        <td hidden  mat-cell *matCellDef="let row">  {{row.Forma_de_Pago}}</td>
        <td hidden  mat-footer-cell *matFooterCellDef> Total </td>
      </ng-container>
@@ -452,8 +460,8 @@
      
      <!-- Valor PAgo Column -->
      <ng-container hidden matColumnDef="Valor">
-       <th  mat-header-cell  *matHeaderCellDef mat-sort-header> Valor </th>
-       <td  mat-cell *matCellDef="let row" [ngStyle]="{'color': row.Cargo==0 ? 'red' : 'black'}" >
+       <th class="valor-columna" mat-header-cell  *matHeaderCellDef mat-sort-header> Valor </th>
+       <td class="valor-columna"  mat-cell *matCellDef="let row" [ngStyle]="{'color': row.Cargo==0 ? 'green' : 'black'}" >
          <ng-container *ngIf="row.Abono==0">
           $ {{row.Cargo.toLocaleString("es-MX",{ minimumFractionDigits: 2 })}} 
          </ng-container>  
