--- a/src/app/pages/reportes/customers/components/nueva-reserva-modal/nueva-reserva-modal.component.html
+++ b/src/app/pages/reportes/customers/components/nueva-reserva-modal/nueva-reserva-modal.component.html
@@ -37,7 +37,7 @@
              outsideDays="hidden"
              [startDate]="fromDate!"
              tabindex="-1"
-             [minDate]=today>
+             [minDate]="minDate">
       <ng-template #t let-date let-focused="focused">
         <span class="custom-day"
               [class.focused]="focused"
