--- a/src/styles.scss
+++ b/src/styles.scss
@@ -109,19 +109,19 @@
 }
 
 
-.ngb-dp-day {
-  width: 3.5rem !important;
-  height: 3.5rem !important;
-}
+// .ngb-dp-day {
+//   width: 3.5rem !important;
+//   height: 3.5rem !important;
+// }
 
-.ngb-dp-day > div {
-  width: 3.5rem !important;
-  height: 3.5rem !important;
-  line-height: 3.5rem !important;
-}
+// .ngb-dp-day > div {
+//   width: 3.5rem !important;
+//   height: 3.5rem !important;
+//   line-height: 3.5rem !important;
+// }
 
-.ngb-dp-weekday {
-  width: 3.5rem !important;
-  height: 3.5rem !important;
-  line-height: 3.5rem !important;
-}
+// .ngb-dp-weekday {
+//   width: 3.5rem !important;
+//   height: 3.5rem !important;
+//   line-height: 3.5rem !important;
+// }
